--- a/both/i18n/en-us.i18n.yml
+++ b/both/i18n/en-us.i18n.yml
@@ -21,7 +21,7 @@ common:
     fullStop: '.'
     searchPlaceholder: 'Search with tx hash / block height / address'
 navbar:
-    siteName: 'Color'
+    siteName: 'Antlia'
     version: 'beta'
     validators: 'Validators'
     blocks: 'Blocks'
